--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     height: 3em;
     /* border: 1px solid red; */
     border-radius: 50%;
-    background-image: url('../assets/favicon.ico');
+    background-image: url('https://www.huya.com/favicon.ico');
     background-repeat: no-repeat;
     background-size: 2em 2em;
     background-position: 0.5em 0.5em;
@@ -11,15 +11,17 @@
     cursor: pointer;
     position: fixed;
     left: 50%;
-    z-index: 10000;
     top: 0;
-    
+    z-index: 10000;
 }
 #dmFilter:hover{
     background-color: hsl(34, 78%, 60%);
     /* transition: 0.3s; */
 }
 
+#dmFilter:hover .filter-container{
+    display: block;
+}
 .filter{
     /* width: 300px;
     height: 300px;
@@ -37,9 +39,10 @@
     background-color: beige;
 }
 .filter-container {
+    display: none;
     margin-bottom: 20px;
     position: absolute;
-    left: 4em;
+    left: 3em;
     top: 0em;
     width: 300px;
     background-color: antiquewhite;
